# rusty-craft

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  minecraft_launcher.rs
src/minecraft_launcher/: app.rs  arguments.rs  install.rs  launch.rs  manifest.rs  modding.rs  options.rs  path.rs  rendering.rs  utils.rs
src/minecraft_launcher/app/: download_tab.rs  launch_tab.rs  login_tab.rs  version_tab.rs
src/minecraft_launcher/install/: assets.rs  java.rs  main.rs
src/minecraft_launcher/manifest/: assets.rs  java.rs  java_versions.rs  main.rs  version.rs
src/minecraft_launcher/modding/: cursed_legacy.rs  fabric.rs  legacy_fabric.rs  liteloader.rs  rift.rs
src/minecraft_launcher/rendering/: main.rs  utils.rs
