[package]
name = "minecraft-launcher"
version = "0.1.0"
authors = ["Cat Core <arthur.koalas@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.19", features = ["serde"]}
directories = "3.0.1"
java-locator = "0.1.2"
os_info = { version = "3.0.1", default-features = false }
reqwest = {version="0.11.2", features = ["blocking", "json"]}
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
tui = {version="0.14.0", features = ["crossterm", "serde"], default-features = false}
crossterm = "0.19.0"

[[bin]]
name = "minecraft-launcher"
