[package]
name = "rusty-craft"
version = "0.1.0"
authors = ["Cat Core <arthur.koalas@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.19", features = ["serde"]}
directories = "3.0.1"
os_info = { version = "3.0.1", default-features = false }
reqwest = {version="0.11.2", features = ["blocking", "json"]}
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
tui = {version="0.14.0", features = ["crossterm", "serde"], default-features = false}
crossterm = "0.19.0"
zip = "0.5.11"
sage_auth = {git = "https://github.com/arthurbambou/sage_auth"}
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = "0.2.25"
serde-xml-rs = "0.4.1"

[[bin]]
name = "rusty-craft"
